src/objects/Jurisdiction__c.object
<CustomObject>
    <fields>
        <fullName>City_Name__c</fullName>
        <inlineHelpText>Official name of the city</inlineHelpText>
        <label>City Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>County_Name__c</fullName>
        <inlineHelpText>Official name of the county</inlineHelpText>
        <label>County Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>District_Map__c</fullName>
        <formula>HYPERLINK(&quot;http://apps.leg.wa.gov/DistrictFinder/results.aspx?District=&quot; &amp;  District_Number__c,  IMAGE(&quot;http://apps.leg.wa.gov/documents/common/maps/&quot;&amp; District_Number__c &amp;&quot;dist.gif&quot;, &quot;District Map&quot;) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>District Map</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>District_Number__c</fullName>
        <label>District Number</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <inlineHelpText>State in which this Jurisdiction resides</inlineHelpText>
        <label>State</label>
        <picklist>
            <picklistValues>
                <fullName>WA</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Washington_State_Map__c</fullName>
        <formula>HYPERLINK(&quot;http://apps.leg.wa.gov/DistrictFinder/statewide.aspx&quot;, &quot;View State Map&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Washington State Map</label>
        <type>Text</type>
    </fields>
    <label>Jurisdiction</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>AllCounties</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Jurisdiction__c.County</value>
        </filters>
        <label>All Counties</label>
    </listViews>
    <listViews>
        <fullName>LegislativeDistricts</fullName>
        <columns>NAME</columns>
        <columns>District_Number__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Jurisdiction__c.LegislativeDistrict</value>
        </filters>
        <label>Legislative Districts</label>
    </listViews>
    <nameField>
        <label>Jurisdiction Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Jurisdictions</pluralLabel>
    <recordTypes>
        <fullName>City</fullName>
        <active>true</active>
        <description>Cities</description>
        <label>City</label>
    </recordTypes>
    <recordTypes>
        <fullName>County</fullName>
        <active>true</active>
        <description>Counties</description>
        <label>County</label>
    </recordTypes>
    <recordTypes>
        <fullName>LegislativeDistrict</fullName>
        <active>true</active>
        <description>State Legislative Districts</description>
        <label>Legislative District</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>